# AP_SmartConfig_MQTT

./: CMakeLists.txt  Makefile  ca.csr  note.txt  partitions.csv  sdkconfig
common/app_config/: app_config.c  app_config.h
common/app_mqtt/: app_mqtt.c  app_mqtt.h
common/gatt_server/: gatt_server.c  gatt_server.h
common/http_server_app/: http_server_app.c  http_server_app.h
common/ledc_lib/: ledc_mode.c  ledc_mode.h
common/output_iot/: output_iot.c  output_iot.h
common/simple_ota/: simple_ota.c  simple_ota.h
common/smartconfig_lib/: smartconfig_lib.c  smartconfig_lib.h
common/wifi_accessPoint/: wifi_ap.c  wifi_ap.h
common/wifi_station/: wifi_station.c  wifi_station.h
html/: loginWeb.html  mainWeb.html
main/: CMakeLists.txt  app_config.c  app_main.c  client.csr  component.mk
